// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`wing compile -t tf-aws > main.tf.json 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.15.2",
    },
    "outputs": {},
  },
  "provider": {
    "aws": [
      {},
    ],
  },
  "resource": {
    "aws_iam_role": {
      "root_boncreate34279eadOnMessage504da396_IamRole_DE85819E": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_create-34279ead-OnMessage-504da396/IamRole",
            "uniqueId": "root_boncreate34279eadOnMessage504da396_IamRole_DE85819E",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
      "root_boncreate34279eadOnMessagef49198da_IamRole_18C8DFB3": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_create-34279ead-OnMessage-f49198da/IamRole",
            "uniqueId": "root_boncreate34279eadOnMessagef49198da_IamRole_18C8DFB3",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
      "root_bondelete34279eadOnMessage1d24274f_IamRole_DEFEC218": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_delete-34279ead-OnMessage-1d24274f/IamRole",
            "uniqueId": "root_bondelete34279eadOnMessage1d24274f_IamRole_DEFEC218",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
      "root_bondelete34279eadOnMessagef164972f_IamRole_CF1A581C": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_delete-34279ead-OnMessage-f164972f/IamRole",
            "uniqueId": "root_bondelete34279eadOnMessagef164972f_IamRole_CF1A581C",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
      "root_bonupdate34279eadOnMessage056d2b2a_IamRole_4FE55B42": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_update-34279ead-OnMessage-056d2b2a/IamRole",
            "uniqueId": "root_bonupdate34279eadOnMessage056d2b2a_IamRole_4FE55B42",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
      "root_bonupdate34279eadOnMessage831cbe3d_IamRole_CBA9DE29": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_update-34279ead-OnMessage-831cbe3d/IamRole",
            "uniqueId": "root_bonupdate34279eadOnMessage831cbe3d_IamRole_CBA9DE29",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
      "root_otheroncreate73fd1eadOnMessage1abee71c_IamRole_78D398C1": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_create-73fd1ead-OnMessage-1abee71c/IamRole",
            "uniqueId": "root_otheroncreate73fd1eadOnMessage1abee71c_IamRole_78D398C1",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
      "root_otherondelete73fd1eadOnMessage993cda8b_IamRole_14DBCDE6": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_delete-73fd1ead-OnMessage-993cda8b/IamRole",
            "uniqueId": "root_otherondelete73fd1eadOnMessage993cda8b_IamRole_14DBCDE6",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
      "root_otheronupdate73fd1eadOnMessagec96932c3_IamRole_8F661592": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_update-73fd1ead-OnMessage-c96932c3/IamRole",
            "uniqueId": "root_otheronupdate73fd1eadOnMessagec96932c3_IamRole_8F661592",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
      "root_test_IamRole_6CDC2D16": {
        "//": {
          "metadata": {
            "path": "root/Default/test/IamRole",
            "uniqueId": "root_test_IamRole_6CDC2D16",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "root_boncreate34279eadOnMessage504da396_IamRolePolicy_79F8E502": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_create-34279ead-OnMessage-504da396/IamRolePolicy",
            "uniqueId": "root_boncreate34279eadOnMessage504da396_IamRolePolicy_79F8E502",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.root_boncreate34279eadOnMessage504da396_IamRole_DE85819E.name}",
      },
      "root_boncreate34279eadOnMessagef49198da_IamRolePolicy_1A60E3B1": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_create-34279ead-OnMessage-f49198da/IamRolePolicy",
            "uniqueId": "root_boncreate34279eadOnMessagef49198da_IamRolePolicy_1A60E3B1",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":[\\"s3:PutObject*\\",\\"s3:Abort*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_other_26932ECB.arn}\\",\\"\${aws_s3_bucket.root_other_26932ECB.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:GetObject*\\",\\"s3:GetBucket*\\",\\"s3:List*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_other_26932ECB.arn}\\",\\"\${aws_s3_bucket.root_other_26932ECB.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:DeleteObject*\\",\\"s3:DeleteObjectVersion*\\",\\"s3:PutLifecycleConfiguration*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_other_26932ECB.arn}\\",\\"\${aws_s3_bucket.root_other_26932ECB.arn}/*\\"],\\"Effect\\":\\"Allow\\"}]}",
        "role": "\${aws_iam_role.root_boncreate34279eadOnMessagef49198da_IamRole_18C8DFB3.name}",
      },
      "root_bondelete34279eadOnMessage1d24274f_IamRolePolicy_F58C7E49": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_delete-34279ead-OnMessage-1d24274f/IamRolePolicy",
            "uniqueId": "root_bondelete34279eadOnMessage1d24274f_IamRolePolicy_F58C7E49",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.root_bondelete34279eadOnMessage1d24274f_IamRole_DEFEC218.name}",
      },
      "root_bondelete34279eadOnMessagef164972f_IamRolePolicy_DBC12580": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_delete-34279ead-OnMessage-f164972f/IamRolePolicy",
            "uniqueId": "root_bondelete34279eadOnMessagef164972f_IamRolePolicy_DBC12580",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":[\\"s3:PutObject*\\",\\"s3:Abort*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_other_26932ECB.arn}\\",\\"\${aws_s3_bucket.root_other_26932ECB.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:GetObject*\\",\\"s3:GetBucket*\\",\\"s3:List*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_other_26932ECB.arn}\\",\\"\${aws_s3_bucket.root_other_26932ECB.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:DeleteObject*\\",\\"s3:DeleteObjectVersion*\\",\\"s3:PutLifecycleConfiguration*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_other_26932ECB.arn}\\",\\"\${aws_s3_bucket.root_other_26932ECB.arn}/*\\"],\\"Effect\\":\\"Allow\\"}]}",
        "role": "\${aws_iam_role.root_bondelete34279eadOnMessagef164972f_IamRole_CF1A581C.name}",
      },
      "root_bonupdate34279eadOnMessage056d2b2a_IamRolePolicy_0F87ED15": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_update-34279ead-OnMessage-056d2b2a/IamRolePolicy",
            "uniqueId": "root_bonupdate34279eadOnMessage056d2b2a_IamRolePolicy_0F87ED15",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.root_bonupdate34279eadOnMessage056d2b2a_IamRole_4FE55B42.name}",
      },
      "root_bonupdate34279eadOnMessage831cbe3d_IamRolePolicy_44AA036B": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_update-34279ead-OnMessage-831cbe3d/IamRolePolicy",
            "uniqueId": "root_bonupdate34279eadOnMessage831cbe3d_IamRolePolicy_44AA036B",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":[\\"s3:PutObject*\\",\\"s3:Abort*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_other_26932ECB.arn}\\",\\"\${aws_s3_bucket.root_other_26932ECB.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:GetObject*\\",\\"s3:GetBucket*\\",\\"s3:List*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_other_26932ECB.arn}\\",\\"\${aws_s3_bucket.root_other_26932ECB.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:DeleteObject*\\",\\"s3:DeleteObjectVersion*\\",\\"s3:PutLifecycleConfiguration*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_other_26932ECB.arn}\\",\\"\${aws_s3_bucket.root_other_26932ECB.arn}/*\\"],\\"Effect\\":\\"Allow\\"}]}",
        "role": "\${aws_iam_role.root_bonupdate34279eadOnMessage831cbe3d_IamRole_CBA9DE29.name}",
      },
      "root_otheroncreate73fd1eadOnMessage1abee71c_IamRolePolicy_67E1D58F": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_create-73fd1ead-OnMessage-1abee71c/IamRolePolicy",
            "uniqueId": "root_otheroncreate73fd1eadOnMessage1abee71c_IamRolePolicy_67E1D58F",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.root_otheroncreate73fd1eadOnMessage1abee71c_IamRole_78D398C1.name}",
      },
      "root_otherondelete73fd1eadOnMessage993cda8b_IamRolePolicy_B8668AC7": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_delete-73fd1ead-OnMessage-993cda8b/IamRolePolicy",
            "uniqueId": "root_otherondelete73fd1eadOnMessage993cda8b_IamRolePolicy_B8668AC7",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.root_otherondelete73fd1eadOnMessage993cda8b_IamRole_14DBCDE6.name}",
      },
      "root_otheronupdate73fd1eadOnMessagec96932c3_IamRolePolicy_16D6CE05": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_update-73fd1ead-OnMessage-c96932c3/IamRolePolicy",
            "uniqueId": "root_otheronupdate73fd1eadOnMessagec96932c3_IamRolePolicy_16D6CE05",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.root_otheronupdate73fd1eadOnMessagec96932c3_IamRole_8F661592.name}",
      },
      "root_test_IamRolePolicy_474A6820": {
        "//": {
          "metadata": {
            "path": "root/Default/test/IamRolePolicy",
            "uniqueId": "root_test_IamRolePolicy_474A6820",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":[\\"s3:PutObject*\\",\\"s3:Abort*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_b_6D0D1E6D.arn}\\",\\"\${aws_s3_bucket.root_b_6D0D1E6D.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:GetObject*\\",\\"s3:GetBucket*\\",\\"s3:List*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_b_6D0D1E6D.arn}\\",\\"\${aws_s3_bucket.root_b_6D0D1E6D.arn}/*\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:DeleteObject*\\",\\"s3:DeleteObjectVersion*\\",\\"s3:PutLifecycleConfiguration*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.root_b_6D0D1E6D.arn}\\",\\"\${aws_s3_bucket.root_b_6D0D1E6D.arn}/*\\"],\\"Effect\\":\\"Allow\\"}]}",
        "role": "\${aws_iam_role.root_test_IamRole_6CDC2D16.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "root_boncreate34279eadOnMessage504da396_IamRolePolicyAttachment_5E694F69": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_create-34279ead-OnMessage-504da396/IamRolePolicyAttachment",
            "uniqueId": "root_boncreate34279eadOnMessage504da396_IamRolePolicyAttachment_5E694F69",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.root_boncreate34279eadOnMessage504da396_IamRole_DE85819E.name}",
      },
      "root_boncreate34279eadOnMessagef49198da_IamRolePolicyAttachment_2B074C40": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_create-34279ead-OnMessage-f49198da/IamRolePolicyAttachment",
            "uniqueId": "root_boncreate34279eadOnMessagef49198da_IamRolePolicyAttachment_2B074C40",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.root_boncreate34279eadOnMessagef49198da_IamRole_18C8DFB3.name}",
      },
      "root_bondelete34279eadOnMessage1d24274f_IamRolePolicyAttachment_596DC377": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_delete-34279ead-OnMessage-1d24274f/IamRolePolicyAttachment",
            "uniqueId": "root_bondelete34279eadOnMessage1d24274f_IamRolePolicyAttachment_596DC377",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.root_bondelete34279eadOnMessage1d24274f_IamRole_DEFEC218.name}",
      },
      "root_bondelete34279eadOnMessagef164972f_IamRolePolicyAttachment_5A7E9640": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_delete-34279ead-OnMessage-f164972f/IamRolePolicyAttachment",
            "uniqueId": "root_bondelete34279eadOnMessagef164972f_IamRolePolicyAttachment_5A7E9640",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.root_bondelete34279eadOnMessagef164972f_IamRole_CF1A581C.name}",
      },
      "root_bonupdate34279eadOnMessage056d2b2a_IamRolePolicyAttachment_50639DF7": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_update-34279ead-OnMessage-056d2b2a/IamRolePolicyAttachment",
            "uniqueId": "root_bonupdate34279eadOnMessage056d2b2a_IamRolePolicyAttachment_50639DF7",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.root_bonupdate34279eadOnMessage056d2b2a_IamRole_4FE55B42.name}",
      },
      "root_bonupdate34279eadOnMessage831cbe3d_IamRolePolicyAttachment_2C4F0CC8": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_update-34279ead-OnMessage-831cbe3d/IamRolePolicyAttachment",
            "uniqueId": "root_bonupdate34279eadOnMessage831cbe3d_IamRolePolicyAttachment_2C4F0CC8",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.root_bonupdate34279eadOnMessage831cbe3d_IamRole_CBA9DE29.name}",
      },
      "root_otheroncreate73fd1eadOnMessage1abee71c_IamRolePolicyAttachment_D02B5351": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_create-73fd1ead-OnMessage-1abee71c/IamRolePolicyAttachment",
            "uniqueId": "root_otheroncreate73fd1eadOnMessage1abee71c_IamRolePolicyAttachment_D02B5351",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.root_otheroncreate73fd1eadOnMessage1abee71c_IamRole_78D398C1.name}",
      },
      "root_otherondelete73fd1eadOnMessage993cda8b_IamRolePolicyAttachment_D1272817": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_delete-73fd1ead-OnMessage-993cda8b/IamRolePolicyAttachment",
            "uniqueId": "root_otherondelete73fd1eadOnMessage993cda8b_IamRolePolicyAttachment_D1272817",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.root_otherondelete73fd1eadOnMessage993cda8b_IamRole_14DBCDE6.name}",
      },
      "root_otheronupdate73fd1eadOnMessagec96932c3_IamRolePolicyAttachment_55737ECB": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_update-73fd1ead-OnMessage-c96932c3/IamRolePolicyAttachment",
            "uniqueId": "root_otheronupdate73fd1eadOnMessagec96932c3_IamRolePolicyAttachment_55737ECB",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.root_otheronupdate73fd1eadOnMessagec96932c3_IamRole_8F661592.name}",
      },
      "root_test_IamRolePolicyAttachment_1102A28A": {
        "//": {
          "metadata": {
            "path": "root/Default/test/IamRolePolicyAttachment",
            "uniqueId": "root_test_IamRolePolicyAttachment_1102A28A",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.root_test_IamRole_6CDC2D16.name}",
      },
    },
    "aws_lambda_function": {
      "root_boncreate34279eadOnMessage504da396_BB20619E": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_create-34279ead-OnMessage-504da396/Default",
            "uniqueId": "root_boncreate34279eadOnMessage504da396_BB20619E",
          },
        },
        "environment": {
          "variables": {
            "WING_FUNCTION_NAME": "b-on_create-34279ead-OnMessage-504da396-c8bb8114",
          },
        },
        "function_name": "b-on_create-34279ead-OnMessage-504da396-c8bb8114",
        "handler": "index.handler",
        "publish": true,
        "role": "\${aws_iam_role.root_boncreate34279eadOnMessage504da396_IamRole_DE85819E.arn}",
        "runtime": "nodejs16.x",
        "s3_bucket": "\${aws_s3_bucket.root_boncreate34279eadOnMessage504da396_Code_2120EEEC.bucket}",
        "s3_key": "\${aws_s3_object.root_boncreate34279eadOnMessage504da396_S3Object_F7BEDBD1.key}",
        "timeout": 30,
      },
      "root_boncreate34279eadOnMessagef49198da_AC6BE7A8": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_create-34279ead-OnMessage-f49198da/Default",
            "uniqueId": "root_boncreate34279eadOnMessagef49198da_AC6BE7A8",
          },
        },
        "environment": {
          "variables": {
            "BUCKET_NAME_73fd1ead": "\${aws_s3_bucket.root_other_26932ECB.bucket}",
            "BUCKET_NAME_73fd1ead_IS_PUBLIC": "false",
            "WING_FUNCTION_NAME": "b-on_create-34279ead-OnMessage-f49198da-c872b0a5",
          },
        },
        "function_name": "b-on_create-34279ead-OnMessage-f49198da-c872b0a5",
        "handler": "index.handler",
        "publish": true,
        "role": "\${aws_iam_role.root_boncreate34279eadOnMessagef49198da_IamRole_18C8DFB3.arn}",
        "runtime": "nodejs16.x",
        "s3_bucket": "\${aws_s3_bucket.root_boncreate34279eadOnMessagef49198da_Code_18115310.bucket}",
        "s3_key": "\${aws_s3_object.root_boncreate34279eadOnMessagef49198da_S3Object_17E8C427.key}",
        "timeout": 30,
      },
      "root_bondelete34279eadOnMessage1d24274f_DD723542": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_delete-34279ead-OnMessage-1d24274f/Default",
            "uniqueId": "root_bondelete34279eadOnMessage1d24274f_DD723542",
          },
        },
        "environment": {
          "variables": {
            "WING_FUNCTION_NAME": "b-on_delete-34279ead-OnMessage-1d24274f-c8d38201",
          },
        },
        "function_name": "b-on_delete-34279ead-OnMessage-1d24274f-c8d38201",
        "handler": "index.handler",
        "publish": true,
        "role": "\${aws_iam_role.root_bondelete34279eadOnMessage1d24274f_IamRole_DEFEC218.arn}",
        "runtime": "nodejs16.x",
        "s3_bucket": "\${aws_s3_bucket.root_bondelete34279eadOnMessage1d24274f_Code_67CCF930.bucket}",
        "s3_key": "\${aws_s3_object.root_bondelete34279eadOnMessage1d24274f_S3Object_CEABAC3E.key}",
        "timeout": 30,
      },
      "root_bondelete34279eadOnMessagef164972f_711DDAA8": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_delete-34279ead-OnMessage-f164972f/Default",
            "uniqueId": "root_bondelete34279eadOnMessagef164972f_711DDAA8",
          },
        },
        "environment": {
          "variables": {
            "BUCKET_NAME_73fd1ead": "\${aws_s3_bucket.root_other_26932ECB.bucket}",
            "BUCKET_NAME_73fd1ead_IS_PUBLIC": "false",
            "WING_FUNCTION_NAME": "b-on_delete-34279ead-OnMessage-f164972f-c81c9ddc",
          },
        },
        "function_name": "b-on_delete-34279ead-OnMessage-f164972f-c81c9ddc",
        "handler": "index.handler",
        "publish": true,
        "role": "\${aws_iam_role.root_bondelete34279eadOnMessagef164972f_IamRole_CF1A581C.arn}",
        "runtime": "nodejs16.x",
        "s3_bucket": "\${aws_s3_bucket.root_bondelete34279eadOnMessagef164972f_Code_24C7B9B4.bucket}",
        "s3_key": "\${aws_s3_object.root_bondelete34279eadOnMessagef164972f_S3Object_B6BE3796.key}",
        "timeout": 30,
      },
      "root_bonupdate34279eadOnMessage056d2b2a_717E9703": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_update-34279ead-OnMessage-056d2b2a/Default",
            "uniqueId": "root_bonupdate34279eadOnMessage056d2b2a_717E9703",
          },
        },
        "environment": {
          "variables": {
            "WING_FUNCTION_NAME": "b-on_update-34279ead-OnMessage-056d2b2a-c85a551a",
          },
        },
        "function_name": "b-on_update-34279ead-OnMessage-056d2b2a-c85a551a",
        "handler": "index.handler",
        "publish": true,
        "role": "\${aws_iam_role.root_bonupdate34279eadOnMessage056d2b2a_IamRole_4FE55B42.arn}",
        "runtime": "nodejs16.x",
        "s3_bucket": "\${aws_s3_bucket.root_bonupdate34279eadOnMessage056d2b2a_Code_43FF40E1.bucket}",
        "s3_key": "\${aws_s3_object.root_bonupdate34279eadOnMessage056d2b2a_S3Object_020F2355.key}",
        "timeout": 30,
      },
      "root_bonupdate34279eadOnMessage831cbe3d_19A9C4A0": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_update-34279ead-OnMessage-831cbe3d/Default",
            "uniqueId": "root_bonupdate34279eadOnMessage831cbe3d_19A9C4A0",
          },
        },
        "environment": {
          "variables": {
            "BUCKET_NAME_73fd1ead": "\${aws_s3_bucket.root_other_26932ECB.bucket}",
            "BUCKET_NAME_73fd1ead_IS_PUBLIC": "false",
            "WING_FUNCTION_NAME": "b-on_update-34279ead-OnMessage-831cbe3d-c8bf534d",
          },
        },
        "function_name": "b-on_update-34279ead-OnMessage-831cbe3d-c8bf534d",
        "handler": "index.handler",
        "publish": true,
        "role": "\${aws_iam_role.root_bonupdate34279eadOnMessage831cbe3d_IamRole_CBA9DE29.arn}",
        "runtime": "nodejs16.x",
        "s3_bucket": "\${aws_s3_bucket.root_bonupdate34279eadOnMessage831cbe3d_Code_20DF1F5C.bucket}",
        "s3_key": "\${aws_s3_object.root_bonupdate34279eadOnMessage831cbe3d_S3Object_D7977411.key}",
        "timeout": 30,
      },
      "root_otheroncreate73fd1eadOnMessage1abee71c_DA8DC32B": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_create-73fd1ead-OnMessage-1abee71c/Default",
            "uniqueId": "root_otheroncreate73fd1eadOnMessage1abee71c_DA8DC32B",
          },
        },
        "environment": {
          "variables": {
            "WING_FUNCTION_NAME": "other-on_create-73fd1ead-OnMessage-1abee71c-c8849bef",
          },
        },
        "function_name": "other-on_create-73fd1ead-OnMessage-1abee71c-c8849bef",
        "handler": "index.handler",
        "publish": true,
        "role": "\${aws_iam_role.root_otheroncreate73fd1eadOnMessage1abee71c_IamRole_78D398C1.arn}",
        "runtime": "nodejs16.x",
        "s3_bucket": "\${aws_s3_bucket.root_otheroncreate73fd1eadOnMessage1abee71c_Code_3145AE64.bucket}",
        "s3_key": "\${aws_s3_object.root_otheroncreate73fd1eadOnMessage1abee71c_S3Object_F5B9E7F9.key}",
        "timeout": 30,
      },
      "root_otherondelete73fd1eadOnMessage993cda8b_0576CB42": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_delete-73fd1ead-OnMessage-993cda8b/Default",
            "uniqueId": "root_otherondelete73fd1eadOnMessage993cda8b_0576CB42",
          },
        },
        "environment": {
          "variables": {
            "WING_FUNCTION_NAME": "other-on_delete-73fd1ead-OnMessage-993cda8b-c8984f07",
          },
        },
        "function_name": "other-on_delete-73fd1ead-OnMessage-993cda8b-c8984f07",
        "handler": "index.handler",
        "publish": true,
        "role": "\${aws_iam_role.root_otherondelete73fd1eadOnMessage993cda8b_IamRole_14DBCDE6.arn}",
        "runtime": "nodejs16.x",
        "s3_bucket": "\${aws_s3_bucket.root_otherondelete73fd1eadOnMessage993cda8b_Code_444C3C7A.bucket}",
        "s3_key": "\${aws_s3_object.root_otherondelete73fd1eadOnMessage993cda8b_S3Object_D7840733.key}",
        "timeout": 30,
      },
      "root_otheronupdate73fd1eadOnMessagec96932c3_FE17E118": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_update-73fd1ead-OnMessage-c96932c3/Default",
            "uniqueId": "root_otheronupdate73fd1eadOnMessagec96932c3_FE17E118",
          },
        },
        "environment": {
          "variables": {
            "WING_FUNCTION_NAME": "other-on_update-73fd1ead-OnMessage-c96932c3-c88dc654",
          },
        },
        "function_name": "other-on_update-73fd1ead-OnMessage-c96932c3-c88dc654",
        "handler": "index.handler",
        "publish": true,
        "role": "\${aws_iam_role.root_otheronupdate73fd1eadOnMessagec96932c3_IamRole_8F661592.arn}",
        "runtime": "nodejs16.x",
        "s3_bucket": "\${aws_s3_bucket.root_otheronupdate73fd1eadOnMessagec96932c3_Code_4852685A.bucket}",
        "s3_key": "\${aws_s3_object.root_otheronupdate73fd1eadOnMessagec96932c3_S3Object_F171210C.key}",
        "timeout": 30,
      },
      "root_test_AAE85061": {
        "//": {
          "metadata": {
            "path": "root/Default/test/Default",
            "uniqueId": "root_test_AAE85061",
          },
        },
        "environment": {
          "variables": {
            "BUCKET_NAME_34279ead": "\${aws_s3_bucket.root_b_6D0D1E6D.bucket}",
            "BUCKET_NAME_34279ead_IS_PUBLIC": "false",
            "WING_FUNCTION_NAME": "test-c8b6eece",
          },
        },
        "function_name": "test-c8b6eece",
        "handler": "index.handler",
        "publish": true,
        "role": "\${aws_iam_role.root_test_IamRole_6CDC2D16.arn}",
        "runtime": "nodejs16.x",
        "s3_bucket": "\${aws_s3_bucket.root_test_Code_2D131EC2.bucket}",
        "s3_key": "\${aws_s3_object.root_test_S3Object_A16CD789.key}",
        "timeout": 30,
      },
    },
    "aws_lambda_permission": {
      "root_boncreate34279eadOnMessage504da396_InvokePermissionc87d64e5301f14659c652cc48f71926324eadd6fad_12BFD3BD": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_create-34279ead-OnMessage-504da396/InvokePermission-c87d64e5301f14659c652cc48f71926324eadd6fad",
            "uniqueId": "root_boncreate34279eadOnMessage504da396_InvokePermissionc87d64e5301f14659c652cc48f71926324eadd6fad_12BFD3BD",
          },
        },
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.root_boncreate34279eadOnMessage504da396_BB20619E.function_name}",
        "principal": "sns.amazonaws.com",
        "source_arn": "\${aws_sns_topic.root_boncreate34279ead_B78D2CCF.arn}",
      },
      "root_boncreate34279eadOnMessagef49198da_InvokePermissionc87d64e5301f14659c652cc48f71926324eadd6fad_61F0EAA6": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_create-34279ead-OnMessage-f49198da/InvokePermission-c87d64e5301f14659c652cc48f71926324eadd6fad",
            "uniqueId": "root_boncreate34279eadOnMessagef49198da_InvokePermissionc87d64e5301f14659c652cc48f71926324eadd6fad_61F0EAA6",
          },
        },
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.root_boncreate34279eadOnMessagef49198da_AC6BE7A8.function_name}",
        "principal": "sns.amazonaws.com",
        "source_arn": "\${aws_sns_topic.root_boncreate34279ead_B78D2CCF.arn}",
      },
      "root_bondelete34279eadOnMessage1d24274f_InvokePermissionc87047b4aa0457c76ebc3100292523b46b44c5ef8c_AF88889D": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_delete-34279ead-OnMessage-1d24274f/InvokePermission-c87047b4aa0457c76ebc3100292523b46b44c5ef8c",
            "uniqueId": "root_bondelete34279eadOnMessage1d24274f_InvokePermissionc87047b4aa0457c76ebc3100292523b46b44c5ef8c_AF88889D",
          },
        },
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.root_bondelete34279eadOnMessage1d24274f_DD723542.function_name}",
        "principal": "sns.amazonaws.com",
        "source_arn": "\${aws_sns_topic.root_bondelete34279ead_4EF957D2.arn}",
      },
      "root_bondelete34279eadOnMessagef164972f_InvokePermissionc87047b4aa0457c76ebc3100292523b46b44c5ef8c_30BA82AF": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_delete-34279ead-OnMessage-f164972f/InvokePermission-c87047b4aa0457c76ebc3100292523b46b44c5ef8c",
            "uniqueId": "root_bondelete34279eadOnMessagef164972f_InvokePermissionc87047b4aa0457c76ebc3100292523b46b44c5ef8c_30BA82AF",
          },
        },
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.root_bondelete34279eadOnMessagef164972f_711DDAA8.function_name}",
        "principal": "sns.amazonaws.com",
        "source_arn": "\${aws_sns_topic.root_bondelete34279ead_4EF957D2.arn}",
      },
      "root_bonupdate34279eadOnMessage056d2b2a_InvokePermissionc8d3abd5442a561e64ef99b761e4a2474298fe3558_028867CA": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_update-34279ead-OnMessage-056d2b2a/InvokePermission-c8d3abd5442a561e64ef99b761e4a2474298fe3558",
            "uniqueId": "root_bonupdate34279eadOnMessage056d2b2a_InvokePermissionc8d3abd5442a561e64ef99b761e4a2474298fe3558_028867CA",
          },
        },
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.root_bonupdate34279eadOnMessage056d2b2a_717E9703.function_name}",
        "principal": "sns.amazonaws.com",
        "source_arn": "\${aws_sns_topic.root_bonupdate34279ead_A7B71C48.arn}",
      },
      "root_bonupdate34279eadOnMessage831cbe3d_InvokePermissionc8d3abd5442a561e64ef99b761e4a2474298fe3558_25D09A37": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_update-34279ead-OnMessage-831cbe3d/InvokePermission-c8d3abd5442a561e64ef99b761e4a2474298fe3558",
            "uniqueId": "root_bonupdate34279eadOnMessage831cbe3d_InvokePermissionc8d3abd5442a561e64ef99b761e4a2474298fe3558_25D09A37",
          },
        },
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.root_bonupdate34279eadOnMessage831cbe3d_19A9C4A0.function_name}",
        "principal": "sns.amazonaws.com",
        "source_arn": "\${aws_sns_topic.root_bonupdate34279ead_A7B71C48.arn}",
      },
      "root_otheroncreate73fd1eadOnMessage1abee71c_InvokePermissionc81bca3a45ccc0cde24f16f8a2ba0cde981333f743_37277D3B": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_create-73fd1ead-OnMessage-1abee71c/InvokePermission-c81bca3a45ccc0cde24f16f8a2ba0cde981333f743",
            "uniqueId": "root_otheroncreate73fd1eadOnMessage1abee71c_InvokePermissionc81bca3a45ccc0cde24f16f8a2ba0cde981333f743_37277D3B",
          },
        },
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.root_otheroncreate73fd1eadOnMessage1abee71c_DA8DC32B.function_name}",
        "principal": "sns.amazonaws.com",
        "source_arn": "\${aws_sns_topic.root_otheroncreate73fd1ead_CA6EF7C3.arn}",
      },
      "root_otherondelete73fd1eadOnMessage993cda8b_InvokePermissionc8d8abc32dc5ec9693050b724ff01a72288ec9759b_DD62645B": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_delete-73fd1ead-OnMessage-993cda8b/InvokePermission-c8d8abc32dc5ec9693050b724ff01a72288ec9759b",
            "uniqueId": "root_otherondelete73fd1eadOnMessage993cda8b_InvokePermissionc8d8abc32dc5ec9693050b724ff01a72288ec9759b_DD62645B",
          },
        },
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.root_otherondelete73fd1eadOnMessage993cda8b_0576CB42.function_name}",
        "principal": "sns.amazonaws.com",
        "source_arn": "\${aws_sns_topic.root_otherondelete73fd1ead_0C63DD09.arn}",
      },
      "root_otheronupdate73fd1eadOnMessagec96932c3_InvokePermissionc8f74f694a787d9c577b986578e0db363c501c8a8b_AD7D81B9": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_update-73fd1ead-OnMessage-c96932c3/InvokePermission-c8f74f694a787d9c577b986578e0db363c501c8a8b",
            "uniqueId": "root_otheronupdate73fd1eadOnMessagec96932c3_InvokePermissionc8f74f694a787d9c577b986578e0db363c501c8a8b_AD7D81B9",
          },
        },
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.root_otheronupdate73fd1eadOnMessagec96932c3_FE17E118.function_name}",
        "principal": "sns.amazonaws.com",
        "source_arn": "\${aws_sns_topic.root_otheronupdate73fd1ead_1ED24FB1.arn}",
      },
    },
    "aws_s3_bucket": {
      "root_b_6D0D1E6D": {
        "//": {
          "metadata": {
            "path": "root/Default/b/Default",
            "uniqueId": "root_b_6D0D1E6D",
          },
        },
        "bucket_prefix": "b-c81aa40d-",
      },
      "root_boncreate34279eadOnMessage504da396_Code_2120EEEC": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_create-34279ead-OnMessage-504da396/Code",
            "uniqueId": "root_boncreate34279eadOnMessage504da396_Code_2120EEEC",
          },
        },
        "bucket_prefix": "code-c89c879b-",
      },
      "root_boncreate34279eadOnMessagef49198da_Code_18115310": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_create-34279ead-OnMessage-f49198da/Code",
            "uniqueId": "root_boncreate34279eadOnMessagef49198da_Code_18115310",
          },
        },
        "bucket_prefix": "code-c8bb58fb-",
      },
      "root_bondelete34279eadOnMessage1d24274f_Code_67CCF930": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_delete-34279ead-OnMessage-1d24274f/Code",
            "uniqueId": "root_bondelete34279eadOnMessage1d24274f_Code_67CCF930",
          },
        },
        "bucket_prefix": "code-c80c54c9-",
      },
      "root_bondelete34279eadOnMessagef164972f_Code_24C7B9B4": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_delete-34279ead-OnMessage-f164972f/Code",
            "uniqueId": "root_bondelete34279eadOnMessagef164972f_Code_24C7B9B4",
          },
        },
        "bucket_prefix": "code-c81bcf13-",
      },
      "root_bonupdate34279eadOnMessage056d2b2a_Code_43FF40E1": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_update-34279ead-OnMessage-056d2b2a/Code",
            "uniqueId": "root_bonupdate34279eadOnMessage056d2b2a_Code_43FF40E1",
          },
        },
        "bucket_prefix": "code-c802aeb2-",
      },
      "root_bonupdate34279eadOnMessage831cbe3d_Code_20DF1F5C": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_update-34279ead-OnMessage-831cbe3d/Code",
            "uniqueId": "root_bonupdate34279eadOnMessage831cbe3d_Code_20DF1F5C",
          },
        },
        "bucket_prefix": "code-c828e29b-",
      },
      "root_other_26932ECB": {
        "//": {
          "metadata": {
            "path": "root/Default/other/Default",
            "uniqueId": "root_other_26932ECB",
          },
        },
        "bucket_prefix": "other-c87420a2-",
      },
      "root_otheroncreate73fd1eadOnMessage1abee71c_Code_3145AE64": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_create-73fd1ead-OnMessage-1abee71c/Code",
            "uniqueId": "root_otheroncreate73fd1eadOnMessage1abee71c_Code_3145AE64",
          },
        },
        "bucket_prefix": "code-c82846e3-",
      },
      "root_otherondelete73fd1eadOnMessage993cda8b_Code_444C3C7A": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_delete-73fd1ead-OnMessage-993cda8b/Code",
            "uniqueId": "root_otherondelete73fd1eadOnMessage993cda8b_Code_444C3C7A",
          },
        },
        "bucket_prefix": "code-c83b0e52-",
      },
      "root_otheronupdate73fd1eadOnMessagec96932c3_Code_4852685A": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_update-73fd1ead-OnMessage-c96932c3/Code",
            "uniqueId": "root_otheronupdate73fd1eadOnMessagec96932c3_Code_4852685A",
          },
        },
        "bucket_prefix": "code-c8116ac9-",
      },
      "root_test_Code_2D131EC2": {
        "//": {
          "metadata": {
            "path": "root/Default/test/Code",
            "uniqueId": "root_test_Code_2D131EC2",
          },
        },
        "bucket_prefix": "code-c883c33b-",
      },
    },
    "aws_s3_bucket_notification": {
      "root_b_S3Objectoncreatenotifier_37FBDD2C": {
        "//": {
          "metadata": {
            "path": "root/Default/b/S3Object_on_create_notifier",
            "uniqueId": "root_b_S3Objectoncreatenotifier_37FBDD2C",
          },
        },
        "bucket": "\${aws_s3_bucket.root_b_6D0D1E6D.id}",
        "depends_on": [
          "aws_sns_topic_policy.root_boncreate34279ead_PublishPermissionc81aa40d099e0812205448708df27e482b34279ead_2BE6086C",
        ],
        "topic": [
          {
            "events": [
              "s3:ObjectCreated:Post",
            ],
            "topic_arn": "\${aws_sns_topic.root_boncreate34279ead_B78D2CCF.arn}",
          },
        ],
      },
      "root_b_S3Objectondeletenotifier_2BF59546": {
        "//": {
          "metadata": {
            "path": "root/Default/b/S3Object_on_delete_notifier",
            "uniqueId": "root_b_S3Objectondeletenotifier_2BF59546",
          },
        },
        "bucket": "\${aws_s3_bucket.root_b_6D0D1E6D.id}",
        "depends_on": [
          "aws_sns_topic_policy.root_bondelete34279ead_PublishPermissionc81aa40d099e0812205448708df27e482b34279ead_00EC0F0E",
        ],
        "topic": [
          {
            "events": [
              "s3:ObjectRemoved:*",
            ],
            "topic_arn": "\${aws_sns_topic.root_bondelete34279ead_4EF957D2.arn}",
          },
        ],
      },
      "root_b_S3Objectonupdatenotifier_BF419C65": {
        "//": {
          "metadata": {
            "path": "root/Default/b/S3Object_on_update_notifier",
            "uniqueId": "root_b_S3Objectonupdatenotifier_BF419C65",
          },
        },
        "bucket": "\${aws_s3_bucket.root_b_6D0D1E6D.id}",
        "depends_on": [
          "aws_sns_topic_policy.root_bonupdate34279ead_PublishPermissionc81aa40d099e0812205448708df27e482b34279ead_CC42B214",
        ],
        "topic": [
          {
            "events": [
              "s3:ObjectCreated:Put",
            ],
            "topic_arn": "\${aws_sns_topic.root_bonupdate34279ead_A7B71C48.arn}",
          },
        ],
      },
      "root_other_S3Objectoncreatenotifier_245EEBFA": {
        "//": {
          "metadata": {
            "path": "root/Default/other/S3Object_on_create_notifier",
            "uniqueId": "root_other_S3Objectoncreatenotifier_245EEBFA",
          },
        },
        "bucket": "\${aws_s3_bucket.root_other_26932ECB.id}",
        "depends_on": [
          "aws_sns_topic_policy.root_otheroncreate73fd1ead_PublishPermissionc87420a27eeb4720af7eb13d276c8124ea73fd1ead_0D22175B",
        ],
        "topic": [
          {
            "events": [
              "s3:ObjectCreated:Post",
            ],
            "topic_arn": "\${aws_sns_topic.root_otheroncreate73fd1ead_CA6EF7C3.arn}",
          },
        ],
      },
      "root_other_S3Objectondeletenotifier_723A6B77": {
        "//": {
          "metadata": {
            "path": "root/Default/other/S3Object_on_delete_notifier",
            "uniqueId": "root_other_S3Objectondeletenotifier_723A6B77",
          },
        },
        "bucket": "\${aws_s3_bucket.root_other_26932ECB.id}",
        "depends_on": [
          "aws_sns_topic_policy.root_otherondelete73fd1ead_PublishPermissionc87420a27eeb4720af7eb13d276c8124ea73fd1ead_7FA94A08",
        ],
        "topic": [
          {
            "events": [
              "s3:ObjectRemoved:*",
            ],
            "topic_arn": "\${aws_sns_topic.root_otherondelete73fd1ead_0C63DD09.arn}",
          },
        ],
      },
      "root_other_S3Objectonupdatenotifier_10BD12E1": {
        "//": {
          "metadata": {
            "path": "root/Default/other/S3Object_on_update_notifier",
            "uniqueId": "root_other_S3Objectonupdatenotifier_10BD12E1",
          },
        },
        "bucket": "\${aws_s3_bucket.root_other_26932ECB.id}",
        "depends_on": [
          "aws_sns_topic_policy.root_otheronupdate73fd1ead_PublishPermissionc87420a27eeb4720af7eb13d276c8124ea73fd1ead_1905E4CF",
        ],
        "topic": [
          {
            "events": [
              "s3:ObjectCreated:Put",
            ],
            "topic_arn": "\${aws_sns_topic.root_otheronupdate73fd1ead_1ED24FB1.arn}",
          },
        ],
      },
    },
    "aws_s3_bucket_public_access_block": {
      "root_b_PublicAccessBlock_F66C0464": {
        "//": {
          "metadata": {
            "path": "root/Default/b/PublicAccessBlock",
            "uniqueId": "root_b_PublicAccessBlock_F66C0464",
          },
        },
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.root_b_6D0D1E6D.bucket}",
        "ignore_public_acls": true,
        "restrict_public_buckets": true,
      },
      "root_other_PublicAccessBlock_E919F15F": {
        "//": {
          "metadata": {
            "path": "root/Default/other/PublicAccessBlock",
            "uniqueId": "root_other_PublicAccessBlock_E919F15F",
          },
        },
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.root_other_26932ECB.bucket}",
        "ignore_public_acls": true,
        "restrict_public_buckets": true,
      },
    },
    "aws_s3_bucket_server_side_encryption_configuration": {
      "root_b_Encryption_2316317F": {
        "//": {
          "metadata": {
            "path": "root/Default/b/Encryption",
            "uniqueId": "root_b_Encryption_2316317F",
          },
        },
        "bucket": "\${aws_s3_bucket.root_b_6D0D1E6D.bucket}",
        "rule": [
          {
            "apply_server_side_encryption_by_default": {
              "sse_algorithm": "AES256",
            },
          },
        ],
      },
      "root_other_Encryption_9AA7D331": {
        "//": {
          "metadata": {
            "path": "root/Default/other/Encryption",
            "uniqueId": "root_other_Encryption_9AA7D331",
          },
        },
        "bucket": "\${aws_s3_bucket.root_other_26932ECB.bucket}",
        "rule": [
          {
            "apply_server_side_encryption_by_default": {
              "sse_algorithm": "AES256",
            },
          },
        ],
      },
    },
    "aws_s3_object": {
      "root_boncreate34279eadOnMessage504da396_S3Object_F7BEDBD1": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_create-34279ead-OnMessage-504da396/S3Object",
            "uniqueId": "root_boncreate34279eadOnMessage504da396_S3Object_F7BEDBD1",
          },
        },
        "bucket": "\${aws_s3_bucket.root_boncreate34279eadOnMessage504da396_Code_2120EEEC.bucket}",
        "key": "<ASSET_KEY>",
        "source": "<ASSET_SOURCE>",
      },
      "root_boncreate34279eadOnMessagef49198da_S3Object_17E8C427": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_create-34279ead-OnMessage-f49198da/S3Object",
            "uniqueId": "root_boncreate34279eadOnMessagef49198da_S3Object_17E8C427",
          },
        },
        "bucket": "\${aws_s3_bucket.root_boncreate34279eadOnMessagef49198da_Code_18115310.bucket}",
        "key": "<ASSET_KEY>",
        "source": "<ASSET_SOURCE>",
      },
      "root_bondelete34279eadOnMessage1d24274f_S3Object_CEABAC3E": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_delete-34279ead-OnMessage-1d24274f/S3Object",
            "uniqueId": "root_bondelete34279eadOnMessage1d24274f_S3Object_CEABAC3E",
          },
        },
        "bucket": "\${aws_s3_bucket.root_bondelete34279eadOnMessage1d24274f_Code_67CCF930.bucket}",
        "key": "<ASSET_KEY>",
        "source": "<ASSET_SOURCE>",
      },
      "root_bondelete34279eadOnMessagef164972f_S3Object_B6BE3796": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_delete-34279ead-OnMessage-f164972f/S3Object",
            "uniqueId": "root_bondelete34279eadOnMessagef164972f_S3Object_B6BE3796",
          },
        },
        "bucket": "\${aws_s3_bucket.root_bondelete34279eadOnMessagef164972f_Code_24C7B9B4.bucket}",
        "key": "<ASSET_KEY>",
        "source": "<ASSET_SOURCE>",
      },
      "root_bonupdate34279eadOnMessage056d2b2a_S3Object_020F2355": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_update-34279ead-OnMessage-056d2b2a/S3Object",
            "uniqueId": "root_bonupdate34279eadOnMessage056d2b2a_S3Object_020F2355",
          },
        },
        "bucket": "\${aws_s3_bucket.root_bonupdate34279eadOnMessage056d2b2a_Code_43FF40E1.bucket}",
        "key": "<ASSET_KEY>",
        "source": "<ASSET_SOURCE>",
      },
      "root_bonupdate34279eadOnMessage831cbe3d_S3Object_D7977411": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_update-34279ead-OnMessage-831cbe3d/S3Object",
            "uniqueId": "root_bonupdate34279eadOnMessage831cbe3d_S3Object_D7977411",
          },
        },
        "bucket": "\${aws_s3_bucket.root_bonupdate34279eadOnMessage831cbe3d_Code_20DF1F5C.bucket}",
        "key": "<ASSET_KEY>",
        "source": "<ASSET_SOURCE>",
      },
      "root_otheroncreate73fd1eadOnMessage1abee71c_S3Object_F5B9E7F9": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_create-73fd1ead-OnMessage-1abee71c/S3Object",
            "uniqueId": "root_otheroncreate73fd1eadOnMessage1abee71c_S3Object_F5B9E7F9",
          },
        },
        "bucket": "\${aws_s3_bucket.root_otheroncreate73fd1eadOnMessage1abee71c_Code_3145AE64.bucket}",
        "key": "<ASSET_KEY>",
        "source": "<ASSET_SOURCE>",
      },
      "root_otherondelete73fd1eadOnMessage993cda8b_S3Object_D7840733": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_delete-73fd1ead-OnMessage-993cda8b/S3Object",
            "uniqueId": "root_otherondelete73fd1eadOnMessage993cda8b_S3Object_D7840733",
          },
        },
        "bucket": "\${aws_s3_bucket.root_otherondelete73fd1eadOnMessage993cda8b_Code_444C3C7A.bucket}",
        "key": "<ASSET_KEY>",
        "source": "<ASSET_SOURCE>",
      },
      "root_otheronupdate73fd1eadOnMessagec96932c3_S3Object_F171210C": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_update-73fd1ead-OnMessage-c96932c3/S3Object",
            "uniqueId": "root_otheronupdate73fd1eadOnMessagec96932c3_S3Object_F171210C",
          },
        },
        "bucket": "\${aws_s3_bucket.root_otheronupdate73fd1eadOnMessagec96932c3_Code_4852685A.bucket}",
        "key": "<ASSET_KEY>",
        "source": "<ASSET_SOURCE>",
      },
      "root_test_S3Object_A16CD789": {
        "//": {
          "metadata": {
            "path": "root/Default/test/S3Object",
            "uniqueId": "root_test_S3Object_A16CD789",
          },
        },
        "bucket": "\${aws_s3_bucket.root_test_Code_2D131EC2.bucket}",
        "key": "<ASSET_KEY>",
        "source": "<ASSET_SOURCE>",
      },
    },
    "aws_sns_topic": {
      "root_boncreate34279ead_B78D2CCF": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_create-34279ead/Default",
            "uniqueId": "root_boncreate34279ead_B78D2CCF",
          },
        },
        "name": "b-on_create-34279ead-c87d64e5",
      },
      "root_bondelete34279ead_4EF957D2": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_delete-34279ead/Default",
            "uniqueId": "root_bondelete34279ead_4EF957D2",
          },
        },
        "name": "b-on_delete-34279ead-c87047b4",
      },
      "root_bonupdate34279ead_A7B71C48": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_update-34279ead/Default",
            "uniqueId": "root_bonupdate34279ead_A7B71C48",
          },
        },
        "name": "b-on_update-34279ead-c8d3abd5",
      },
      "root_otheroncreate73fd1ead_CA6EF7C3": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_create-73fd1ead/Default",
            "uniqueId": "root_otheroncreate73fd1ead_CA6EF7C3",
          },
        },
        "name": "other-on_create-73fd1ead-c81bca3a",
      },
      "root_otherondelete73fd1ead_0C63DD09": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_delete-73fd1ead/Default",
            "uniqueId": "root_otherondelete73fd1ead_0C63DD09",
          },
        },
        "name": "other-on_delete-73fd1ead-c8d8abc3",
      },
      "root_otheronupdate73fd1ead_1ED24FB1": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_update-73fd1ead/Default",
            "uniqueId": "root_otheronupdate73fd1ead_1ED24FB1",
          },
        },
        "name": "other-on_update-73fd1ead-c8f74f69",
      },
    },
    "aws_sns_topic_policy": {
      "root_boncreate34279ead_PublishPermissionc81aa40d099e0812205448708df27e482b34279ead_2BE6086C": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_create-34279ead/PublishPermission-c81aa40d099e0812205448708df27e482b34279ead",
            "uniqueId": "root_boncreate34279ead_PublishPermissionc81aa40d099e0812205448708df27e482b34279ead_2BE6086C",
          },
        },
        "arn": "\${aws_sns_topic.root_boncreate34279ead_B78D2CCF.arn}",
        "policy": "{\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Principal\\":{\\"Service\\":\\"s3.amazonaws.com\\"},\\"Action\\":\\"sns:Publish\\",\\"Resource\\":\\"\${aws_sns_topic.root_boncreate34279ead_B78D2CCF.arn}\\",\\"Condition\\":{\\"ArnEquals\\":{\\"aws:SourceArn\\":\\"\${aws_s3_bucket.root_b_6D0D1E6D.arn}\\"}}}]}",
      },
      "root_bondelete34279ead_PublishPermissionc81aa40d099e0812205448708df27e482b34279ead_00EC0F0E": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_delete-34279ead/PublishPermission-c81aa40d099e0812205448708df27e482b34279ead",
            "uniqueId": "root_bondelete34279ead_PublishPermissionc81aa40d099e0812205448708df27e482b34279ead_00EC0F0E",
          },
        },
        "arn": "\${aws_sns_topic.root_bondelete34279ead_4EF957D2.arn}",
        "policy": "{\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Principal\\":{\\"Service\\":\\"s3.amazonaws.com\\"},\\"Action\\":\\"sns:Publish\\",\\"Resource\\":\\"\${aws_sns_topic.root_bondelete34279ead_4EF957D2.arn}\\",\\"Condition\\":{\\"ArnEquals\\":{\\"aws:SourceArn\\":\\"\${aws_s3_bucket.root_b_6D0D1E6D.arn}\\"}}}]}",
      },
      "root_bonupdate34279ead_PublishPermissionc81aa40d099e0812205448708df27e482b34279ead_CC42B214": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_update-34279ead/PublishPermission-c81aa40d099e0812205448708df27e482b34279ead",
            "uniqueId": "root_bonupdate34279ead_PublishPermissionc81aa40d099e0812205448708df27e482b34279ead_CC42B214",
          },
        },
        "arn": "\${aws_sns_topic.root_bonupdate34279ead_A7B71C48.arn}",
        "policy": "{\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Principal\\":{\\"Service\\":\\"s3.amazonaws.com\\"},\\"Action\\":\\"sns:Publish\\",\\"Resource\\":\\"\${aws_sns_topic.root_bonupdate34279ead_A7B71C48.arn}\\",\\"Condition\\":{\\"ArnEquals\\":{\\"aws:SourceArn\\":\\"\${aws_s3_bucket.root_b_6D0D1E6D.arn}\\"}}}]}",
      },
      "root_otheroncreate73fd1ead_PublishPermissionc87420a27eeb4720af7eb13d276c8124ea73fd1ead_0D22175B": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_create-73fd1ead/PublishPermission-c87420a27eeb4720af7eb13d276c8124ea73fd1ead",
            "uniqueId": "root_otheroncreate73fd1ead_PublishPermissionc87420a27eeb4720af7eb13d276c8124ea73fd1ead_0D22175B",
          },
        },
        "arn": "\${aws_sns_topic.root_otheroncreate73fd1ead_CA6EF7C3.arn}",
        "policy": "{\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Principal\\":{\\"Service\\":\\"s3.amazonaws.com\\"},\\"Action\\":\\"sns:Publish\\",\\"Resource\\":\\"\${aws_sns_topic.root_otheroncreate73fd1ead_CA6EF7C3.arn}\\",\\"Condition\\":{\\"ArnEquals\\":{\\"aws:SourceArn\\":\\"\${aws_s3_bucket.root_other_26932ECB.arn}\\"}}}]}",
      },
      "root_otherondelete73fd1ead_PublishPermissionc87420a27eeb4720af7eb13d276c8124ea73fd1ead_7FA94A08": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_delete-73fd1ead/PublishPermission-c87420a27eeb4720af7eb13d276c8124ea73fd1ead",
            "uniqueId": "root_otherondelete73fd1ead_PublishPermissionc87420a27eeb4720af7eb13d276c8124ea73fd1ead_7FA94A08",
          },
        },
        "arn": "\${aws_sns_topic.root_otherondelete73fd1ead_0C63DD09.arn}",
        "policy": "{\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Principal\\":{\\"Service\\":\\"s3.amazonaws.com\\"},\\"Action\\":\\"sns:Publish\\",\\"Resource\\":\\"\${aws_sns_topic.root_otherondelete73fd1ead_0C63DD09.arn}\\",\\"Condition\\":{\\"ArnEquals\\":{\\"aws:SourceArn\\":\\"\${aws_s3_bucket.root_other_26932ECB.arn}\\"}}}]}",
      },
      "root_otheronupdate73fd1ead_PublishPermissionc87420a27eeb4720af7eb13d276c8124ea73fd1ead_1905E4CF": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_update-73fd1ead/PublishPermission-c87420a27eeb4720af7eb13d276c8124ea73fd1ead",
            "uniqueId": "root_otheronupdate73fd1ead_PublishPermissionc87420a27eeb4720af7eb13d276c8124ea73fd1ead_1905E4CF",
          },
        },
        "arn": "\${aws_sns_topic.root_otheronupdate73fd1ead_1ED24FB1.arn}",
        "policy": "{\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Principal\\":{\\"Service\\":\\"s3.amazonaws.com\\"},\\"Action\\":\\"sns:Publish\\",\\"Resource\\":\\"\${aws_sns_topic.root_otheronupdate73fd1ead_1ED24FB1.arn}\\",\\"Condition\\":{\\"ArnEquals\\":{\\"aws:SourceArn\\":\\"\${aws_s3_bucket.root_other_26932ECB.arn}\\"}}}]}",
      },
    },
    "aws_sns_topic_subscription": {
      "root_boncreate34279ead_boncreate34279eadTopicSubscription504da396_59AE0BE2": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_create-34279ead/b-on_create-34279ead-TopicSubscription-504da396",
            "uniqueId": "root_boncreate34279ead_boncreate34279eadTopicSubscription504da396_59AE0BE2",
          },
        },
        "endpoint": "\${aws_lambda_function.root_boncreate34279eadOnMessage504da396_BB20619E.arn}",
        "protocol": "lambda",
        "topic_arn": "\${aws_sns_topic.root_boncreate34279ead_B78D2CCF.arn}",
      },
      "root_boncreate34279ead_boncreate34279eadTopicSubscriptionf49198da_4C7D3ED5": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_create-34279ead/b-on_create-34279ead-TopicSubscription-f49198da",
            "uniqueId": "root_boncreate34279ead_boncreate34279eadTopicSubscriptionf49198da_4C7D3ED5",
          },
        },
        "endpoint": "\${aws_lambda_function.root_boncreate34279eadOnMessagef49198da_AC6BE7A8.arn}",
        "protocol": "lambda",
        "topic_arn": "\${aws_sns_topic.root_boncreate34279ead_B78D2CCF.arn}",
      },
      "root_bondelete34279ead_bondelete34279eadTopicSubscription1d24274f_3D42B5C7": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_delete-34279ead/b-on_delete-34279ead-TopicSubscription-1d24274f",
            "uniqueId": "root_bondelete34279ead_bondelete34279eadTopicSubscription1d24274f_3D42B5C7",
          },
        },
        "endpoint": "\${aws_lambda_function.root_bondelete34279eadOnMessage1d24274f_DD723542.arn}",
        "protocol": "lambda",
        "topic_arn": "\${aws_sns_topic.root_bondelete34279ead_4EF957D2.arn}",
      },
      "root_bondelete34279ead_bondelete34279eadTopicSubscriptionf164972f_39B558D5": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_delete-34279ead/b-on_delete-34279ead-TopicSubscription-f164972f",
            "uniqueId": "root_bondelete34279ead_bondelete34279eadTopicSubscriptionf164972f_39B558D5",
          },
        },
        "endpoint": "\${aws_lambda_function.root_bondelete34279eadOnMessagef164972f_711DDAA8.arn}",
        "protocol": "lambda",
        "topic_arn": "\${aws_sns_topic.root_bondelete34279ead_4EF957D2.arn}",
      },
      "root_bonupdate34279ead_bonupdate34279eadTopicSubscription056d2b2a_97B97DA1": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_update-34279ead/b-on_update-34279ead-TopicSubscription-056d2b2a",
            "uniqueId": "root_bonupdate34279ead_bonupdate34279eadTopicSubscription056d2b2a_97B97DA1",
          },
        },
        "endpoint": "\${aws_lambda_function.root_bonupdate34279eadOnMessage056d2b2a_717E9703.arn}",
        "protocol": "lambda",
        "topic_arn": "\${aws_sns_topic.root_bonupdate34279ead_A7B71C48.arn}",
      },
      "root_bonupdate34279ead_bonupdate34279eadTopicSubscription831cbe3d_EB5D2603": {
        "//": {
          "metadata": {
            "path": "root/Default/b-on_update-34279ead/b-on_update-34279ead-TopicSubscription-831cbe3d",
            "uniqueId": "root_bonupdate34279ead_bonupdate34279eadTopicSubscription831cbe3d_EB5D2603",
          },
        },
        "endpoint": "\${aws_lambda_function.root_bonupdate34279eadOnMessage831cbe3d_19A9C4A0.arn}",
        "protocol": "lambda",
        "topic_arn": "\${aws_sns_topic.root_bonupdate34279ead_A7B71C48.arn}",
      },
      "root_otheroncreate73fd1ead_otheroncreate73fd1eadTopicSubscription1abee71c_22F90DD4": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_create-73fd1ead/other-on_create-73fd1ead-TopicSubscription-1abee71c",
            "uniqueId": "root_otheroncreate73fd1ead_otheroncreate73fd1eadTopicSubscription1abee71c_22F90DD4",
          },
        },
        "endpoint": "\${aws_lambda_function.root_otheroncreate73fd1eadOnMessage1abee71c_DA8DC32B.arn}",
        "protocol": "lambda",
        "topic_arn": "\${aws_sns_topic.root_otheroncreate73fd1ead_CA6EF7C3.arn}",
      },
      "root_otherondelete73fd1ead_otherondelete73fd1eadTopicSubscription993cda8b_ACD4BC4E": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_delete-73fd1ead/other-on_delete-73fd1ead-TopicSubscription-993cda8b",
            "uniqueId": "root_otherondelete73fd1ead_otherondelete73fd1eadTopicSubscription993cda8b_ACD4BC4E",
          },
        },
        "endpoint": "\${aws_lambda_function.root_otherondelete73fd1eadOnMessage993cda8b_0576CB42.arn}",
        "protocol": "lambda",
        "topic_arn": "\${aws_sns_topic.root_otherondelete73fd1ead_0C63DD09.arn}",
      },
      "root_otheronupdate73fd1ead_otheronupdate73fd1eadTopicSubscriptionc96932c3_0BD21364": {
        "//": {
          "metadata": {
            "path": "root/Default/other-on_update-73fd1ead/other-on_update-73fd1ead-TopicSubscription-c96932c3",
            "uniqueId": "root_otheronupdate73fd1ead_otheronupdate73fd1eadTopicSubscriptionc96932c3_0BD21364",
          },
        },
        "endpoint": "\${aws_lambda_function.root_otheronupdate73fd1eadOnMessagec96932c3_FE17E118.arn}",
        "protocol": "lambda",
        "topic_arn": "\${aws_sns_topic.root_otheronupdate73fd1ead_1ED24FB1.arn}",
      },
    },
  },
}
`;

exports[`wing compile -t tf-aws > preflight.js 1`] = `
"const $stdlib = require('@winglang/sdk');
const $outdir = process.env.WING_SYNTH_DIR ?? \\".\\";

function __app(target) {
	switch (target) {
		case \\"sim\\":
			return $stdlib.sim.App;
		case \\"tfaws\\":
		case \\"tf-aws\\":
			return $stdlib.tfaws.App;
		case \\"tf-gcp\\":
			return $stdlib.tfgcp.App;
		case \\"tf-azure\\":
			return $stdlib.tfazure.App;
		case \\"awscdk\\":
			return $stdlib.awscdk.App;
		default:
			throw new Error(\`Unknown WING_TARGET value: \\"\${process.env.WING_TARGET ?? \\"\\"}\\"\`);
	}
}
const $App = __app(process.env.WING_TARGET);

const cloud = require('@winglang/sdk').cloud;
class MyApp extends $App {
constructor() {
  super({ outdir: $outdir, name: \\"bucket_events\\", plugins: $plugins });
  
  const other = this.node.root.newAbstract(\\"@winglang/sdk.cloud.Bucket\\",this,\\"other\\");
  const b = this.node.root.newAbstract(\\"@winglang/sdk.cloud.Bucket\\",this,\\"b\\");
  (b.onDelete(new $stdlib.core.Inflight(this, \\"$Inflight1\\", {
    code: $stdlib.core.NodeJsCode.fromFile(require.resolve(\\"./proc.e0895e35017839af19c4cdf5e5752ce00b8bee3a6425933fc1349d037cf9ed23/index.js\\".replace(/\\\\\\\\/g, \\"/\\"))),
    bindings: {
    }
  })));
  (b.onUpdate(new $stdlib.core.Inflight(this, \\"$Inflight2\\", {
    code: $stdlib.core.NodeJsCode.fromFile(require.resolve(\\"./proc.4c20a426ba35d2bc9530ee9673d6111365502af4b9943b5993189fef4c9cbb24/index.js\\".replace(/\\\\\\\\/g, \\"/\\"))),
    bindings: {
    }
  })));
  (b.onCreate(new $stdlib.core.Inflight(this, \\"$Inflight3\\", {
    code: $stdlib.core.NodeJsCode.fromFile(require.resolve(\\"./proc.fea0ccbdf726c314d7bdccef2e9a3af2667b14bbf90b08535bc3b8531676a5f7/index.js\\".replace(/\\\\\\\\/g, \\"/\\"))),
    bindings: {
    }
  })));
  (b.onEvent(new $stdlib.core.Inflight(this, \\"$Inflight4\\", {
    code: $stdlib.core.NodeJsCode.fromFile(require.resolve(\\"./proc.dbe235d917909459004bd5b4ee5f5c116451dd314d6afb668f81aca7412c951c/index.js\\".replace(/\\\\\\\\/g, \\"/\\"))),
    bindings: {
      other: {
        obj: other,
        ops: [\\"delete\\",\\"get\\",\\"get_json\\",\\"list\\",\\"public_url\\",\\"put\\",\\"put_json\\"]
      },
    }
  })));
  (other.onEvent(new $stdlib.core.Inflight(this, \\"$Inflight5\\", {
    code: $stdlib.core.NodeJsCode.fromFile(require.resolve(\\"./proc.1077abc4fd9d2c1dcaf67fa6bfcd127520e9da3f7cb638866ee99e8ac058bb04/index.js\\".replace(/\\\\\\\\/g, \\"/\\"))),
    bindings: {
    }
  })));
  this.node.root.newAbstract(\\"@winglang/sdk.cloud.Function\\",this,\\"test\\",new $stdlib.core.Inflight(this, \\"$Inflight6\\", {
    code: $stdlib.core.NodeJsCode.fromFile(require.resolve(\\"./proc.bd899ae09cdb75ce681c2be5132db5f8fbc54bd45d0a438077f48809708c05a6/index.js\\".replace(/\\\\\\\\/g, \\"/\\"))),
    bindings: {
      b: {
        obj: b,
        ops: [\\"delete\\",\\"get\\",\\"get_json\\",\\"list\\",\\"public_url\\",\\"put\\",\\"put_json\\"]
      },
    }
  }));
}
}
new MyApp().synth();"
`;

exports[`wing compile -t tf-aws > proc.4c20a426ba35d2bc9530ee9673d6111365502af4b9943b5993189fef4c9cbb24/index.js 1`] = `
"async handle(key) { const {  } = this; {
  {console.log(\`updated \${key}\`)};
} };"
`;

exports[`wing compile -t tf-aws > proc.1077abc4fd9d2c1dcaf67fa6bfcd127520e9da3f7cb638866ee99e8ac058bb04/index.js 1`] = `
"async handle(key) { const {  } = this; {
  {console.log(\\"other bucket event called!\\")};
} };"
`;

exports[`wing compile -t tf-aws > proc.bd899ae09cdb75ce681c2be5132db5f8fbc54bd45d0a438077f48809708c05a6/index.js 1`] = `
"async handle() { const { b } = this; {
  (await b.put(\\"a\\",\\"1\\"));
  (await b.put(\\"b\\",\\"1\\"));
  (await b.put(\\"b\\",\\"100\\"));
  (await b.put(\\"c\\",\\"1\\"));
  (await b.delete(\\"c\\"));
} };"
`;

exports[`wing compile -t tf-aws > proc.dbe235d917909459004bd5b4ee5f5c116451dd314d6afb668f81aca7412c951c/index.js 1`] = `
"async handle(key) { const { other } = this; {
  {console.log(\`last key \${key}\`)};
  (await other.put(\\"last_operation_key\\",((args) => { return JSON.stringify(args[0], null, args[1]) })([key])));
} };"
`;

exports[`wing compile -t tf-aws > proc.e0895e35017839af19c4cdf5e5752ce00b8bee3a6425933fc1349d037cf9ed23/index.js 1`] = `
"async handle(key) { const {  } = this; {
  {console.log(\`deleted \${key}\`)};
} };"
`;

exports[`wing compile -t tf-aws > proc.fea0ccbdf726c314d7bdccef2e9a3af2667b14bbf90b08535bc3b8531676a5f7/index.js 1`] = `
"async handle(key) { const {  } = this; {
  {console.log(\`created \${key}\`)};
} };"
`;

exports[`wing test > stdout 1`] = `
"pass ┌ bucket_events.w » root/test
     │ created a
     │ last key a
     │ other bucket event called!
     │ created b
     │ last key b
     │ other bucket event called!
     │ updated b
     │ last key b
     │ other bucket event called!
     │ created c
     │ last key c
     │ other bucket event called!
     │ deleted c
     │ last key c
     └ other bucket event called!"
`;
